component module service pipe

--- a/firstProject/src/app/app.component.html
+++ b/firstProject/src/app/app.component.html
@@ -1,12 +1,23 @@
+<app-home></app-home>
+<hr>
+<app-contact></app-contact>
+<hr>
+<app-service></app-service>
+<hr>
+<app-editprofile></app-editprofile>
+<hr>
+<app-statement></app-statement>
 <div>
     <h1>Data Binding In Angular</h1>
 </div>
 <div>
     <h1>Interploation</h1>
-    <h2>{{title}}</h2>
-    <h3>{{message}}</h3>
+    <h2>{{title | uppercase }}</h2>
+    <h3>{{message | lowercase}}</h3>
     <h3>{{employee.name}}</h3>
     <h3>{{employee.salary}}</h3>
+
+    <h3>{{ 34.50 | currency : 'EUR'}}</h3>
 </div>
 <div>
     <h1>One Way : Property Binding</h1>
