reactive forms code updated

--- a/material/src/app/app.component.html
+++ b/material/src/app/app.component.html
@@ -17,6 +17,8 @@
 
     <app-studio-upload></app-studio-upload>
     <app-video-content></app-video-content>
+    <hr>
+    <app-studio-livestream></app-studio-livestream>
 
 
     <!-- <mat-drawer-container class="example-container" autosize>
