routing and navigation code

--- a/firstProject/src/app/app.component.html
+++ b/firstProject/src/app/app.component.html
@@ -16,6 +16,7 @@
     <h3>{{message | lowercase}}</h3>
     <h3>{{employee.name}}</h3>
     <h3>{{employee.salary}}</h3>
+    <h3>{{dateOfJoining | date : 'short'}}</h3>
 
     <h3>{{ 34.50 | currency : 'EUR'}}</h3>
 </div>
