--- a/material/src/app/app.component.html
+++ b/material/src/app/app.component.html
@@ -7,9 +7,11 @@
             <span>My App</span>
 
             <nav mat-tab-nav-bar>
+                <a mat-tab-link routerLink="/login">Login</a>
                 <a mat-tab-link routerLink="/video-content">Video Content</a>
                 <a mat-tab-link routerLink="/studio-upload">Studio Upload</a>
                 <a mat-tab-link routerLink="/stdio-live">Stdio Live</a>
+
             </nav>
 
             <span class="example-spacer"></span>
